Adicionado notas a partir do banco de dados e menus

--- a/shared/styles/boot.css
+++ b/shared/styles/boot.css
@@ -260,6 +260,10 @@ input:-webkit-autofill {
     justify-content: center;
 }
 
+.alc-center {
+    align-content: center;
+}
+
 /* FUNCIONTS */
 .uppercase {
     text-transform: uppercase;
