--- a/themes/web/assets/css/theme.css
+++ b/themes/web/assets/css/theme.css
@@ -3,6 +3,7 @@
     box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.1);
 
     font-size: 1.4em;
+    color: #3A3A3A;
 }
 
 .menu > .content {
@@ -100,5 +101,22 @@ input[type='radio']:checked ~ label.btn {
     align-items: center;
     justify-content: center;
     color: #FFFFFF;
+}
+
+.menu_ul {
+    flex-basis: 100%;
+}
+
+.menu_ul_item {
+    margin: 0 15px;
+}
+
+.menu_ul_item > a {
+    text-decoration: none;
+    color: #3A3A3A;
+}
+
+.menu_ul_item > a:hover {
+    text-decoration: underline;
 }
 
